tests/__snapshots__/validation-configFile-tabs-wrong-option-value-type-stderr.snap.txt
Error: Option 'failFast' requires a value of type boolean.

  1 | {
> 2 |  "failFast": "always",
    |              ^
  3 |  "rootPath": true
  4 | }
  5 | 

      at ./tstyche.config.json:2:14

Error: Option 'rootPath' requires a value of type string.

  1 | {
  2 |  "failFast": "always",
> 3 |  "rootPath": true
    |              ^
  4 | }
  5 | 

      at ./tstyche.config.json:3:14

